# atp

./: .gitignore  Makefile  README.md  atp.opam  combining.ml  folderived.ml  lcf.ml  lib.ml  order.ml  prop.ml  propexamples.ml  resolution.ml  stal.ml  tactics.ml
