opam-version: "2.0"
maintainer: "Ryosuke SATO <rsato@is.s.u-tokyo.ac.jp>"
authors: [
  "John Harrison"
]
homepage: "https://github.com/ryosu-sato/atp"
dev-repo: "git+https://github.com/ryosu-sato/atp.git"
bug-reports: "https://github.com/ryosu-sato/atp/issues"
build: [
  [make "all"]
]
depends: [
  "num"
  "camlp5"
]
install: [
  [make "install"]
]
synopsis: "Code for 'Handbook of Practical Logic and Automated Reasoning'"
